phase 7 in progress switch machines

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -17,6 +17,7 @@
     "@gouide/frontend-theme": "workspace:*",
     "@gouide/frontend-ui": "workspace:*",
     "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-store": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
